Fix coremods can be loaded twice in some cases